# flake8-new-union-types

./: .travis.yml  LICENSE  README.md  flake8_new_union_types.py  flake8_pep604.py  pyproject.toml  tox.ini
.github/workflows/: check.yml
tests/: conftest.py  test_nu001.py  test_nu002.py  test_nu003.py  test_zq001.py  test_zq002.py
tests/samples/: nu001_1.py  nu001_2.py  nu001_3.py  nu002_1.py  nu002_3.py  zq001_1.py  zq001_3.py  zq002_1.py  zq002_2.py
