[tool.poetry]
name = "flake8-pep604"
version = "0.1.0"
description = "Flake8 plugin to enforce the new Union and Optional annotation syntax defined in PEP 604"
authors = ["Dmitriy Pryanichnikov <dmitrii.prianichnikov@incountry.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.0.0"
attrs = "^21.4.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.2"
mypy = "^0.950"

[tool.mypy]
exclude = [
    '^tests/samples/',
]
ignore_missing_imports = true

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
